// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Home Account Exists 1`] = `
<main>
  <header>
    <nav
      className="container-fluid navbar navbar-expand-lg navbar-dark"
    >
      <div
        aria-labelledby="title"
        className="navbar-brand pointer"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-none d-md-block"
        height="44"
        src={
          Object {
            "process": [Function],
          }
        }
        width={181}
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-md-none"
        height="44"
        src={
          Object {
            "process": [Function],
          }
        }
        width={64}
      />
      <div
        aria-labelledby="title"
        className="pointer navbar-brand nav-item nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      />
      <div
        className="navbar-brand"
        id="title"
      >
        eFiling Demo Client
      </div>
    </nav>
  </header>
  <div
    className="page"
  >
    <div
      className="content col-md-10"
    >
      <div>
        <p>
          Account exists! Proceed
        </p>
        <div>
          <button
            className="normal-white btn"
            onClick={[Function]}
            type="button"
          >
            Cancel and return to client
          </button>
        </div>
      </div>
    </div>
  </div>
  <footer
    className="footer"
  >
    <nav
      className="navbar navbar-expand-sm navbar-dark justify-content-end"
    >
      <button
        className="navbar-toggler"
        data-target="#footerBar"
        data-toggle="collapse"
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse flex-grow-0"
        id="footerBar"
      >
        <ul
          className="navbar-nav text-right"
        >
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca"
              rel="noopener noreferrer"
              target="_blank"
            >
              BC Government
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/disclaimer"
              rel="noopener noreferrer"
              target="_blank"
            >
              Disclaimer
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/privacy"
              rel="noopener noreferrer"
              target="_blank"
            >
              Privacy
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/accessibility"
              rel="noopener noreferrer"
              target="_blank"
            >
              Accessibility
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/copyright"
              rel="noopener noreferrer"
              target="_blank"
            >
              Copyright
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </footer>
</main>
`;

exports[`Storyshots Home Account Exists Mobile 1`] = `
<main>
  <header>
    <nav
      className="container-fluid navbar navbar-expand-lg navbar-dark"
    >
      <div
        aria-labelledby="title"
        className="navbar-brand pointer"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-none d-md-block"
        height="44"
        src={
          Object {
            "process": [Function],
          }
        }
        width={181}
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-md-none"
        height="44"
        src={
          Object {
            "process": [Function],
          }
        }
        width={64}
      />
      <div
        aria-labelledby="title"
        className="pointer navbar-brand nav-item nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      />
      <div
        className="navbar-brand"
        id="title"
      >
        eFiling Demo Client
      </div>
    </nav>
  </header>
  <div
    className="page"
  >
    <div
      className="content col-md-10"
    >
      <div>
        <p>
          Account exists! Proceed
        </p>
        <div>
          <button
            className="normal-white btn"
            onClick={[Function]}
            type="button"
          >
            Cancel and return to client
          </button>
        </div>
      </div>
    </div>
  </div>
  <footer
    className="footer"
  >
    <nav
      className="navbar navbar-expand-sm navbar-dark justify-content-end"
    >
      <button
        className="navbar-toggler"
        data-target="#footerBar"
        data-toggle="collapse"
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse flex-grow-0"
        id="footerBar"
      >
        <ul
          className="navbar-nav text-right"
        >
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca"
              rel="noopener noreferrer"
              target="_blank"
            >
              BC Government
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/disclaimer"
              rel="noopener noreferrer"
              target="_blank"
            >
              Disclaimer
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/privacy"
              rel="noopener noreferrer"
              target="_blank"
            >
              Privacy
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/accessibility"
              rel="noopener noreferrer"
              target="_blank"
            >
              Accessibility
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/copyright"
              rel="noopener noreferrer"
              target="_blank"
            >
              Copyright
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </footer>
</main>
`;

exports[`Storyshots Home Loader 1`] = `
<main>
  <header>
    <nav
      className="container-fluid navbar navbar-expand-lg navbar-dark"
    >
      <div
        aria-labelledby="title"
        className="navbar-brand pointer"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-none d-md-block"
        height="44"
        src={
          Object {
            "process": [Function],
          }
        }
        width={181}
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-md-none"
        height="44"
        src={
          Object {
            "process": [Function],
          }
        }
        width={64}
      />
      <div
        aria-labelledby="title"
        className="pointer navbar-brand nav-item nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      />
      <div
        className="navbar-brand"
        id="title"
      >
        eFiling Demo Client
      </div>
    </nav>
  </header>
  <div
    className="page"
  >
    <div
      className="content col-md-10"
    >
      <div
        className="loader-align"
      >
        <div
          className="page-loader"
        />
        <br />
        Loading... Please Wait
      </div>
    </div>
  </div>
  <footer
    className="footer"
  >
    <nav
      className="navbar navbar-expand-sm navbar-dark justify-content-end"
    >
      <button
        className="navbar-toggler"
        data-target="#footerBar"
        data-toggle="collapse"
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse flex-grow-0"
        id="footerBar"
      >
        <ul
          className="navbar-nav text-right"
        >
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca"
              rel="noopener noreferrer"
              target="_blank"
            >
              BC Government
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/disclaimer"
              rel="noopener noreferrer"
              target="_blank"
            >
              Disclaimer
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/privacy"
              rel="noopener noreferrer"
              target="_blank"
            >
              Privacy
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/accessibility"
              rel="noopener noreferrer"
              target="_blank"
            >
              Accessibility
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/copyright"
              rel="noopener noreferrer"
              target="_blank"
            >
              Copyright
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </footer>
</main>
`;

exports[`Storyshots Home Loader Mobile 1`] = `
<main>
  <header>
    <nav
      className="container-fluid navbar navbar-expand-lg navbar-dark"
    >
      <div
        aria-labelledby="title"
        className="navbar-brand pointer"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-none d-md-block"
        height="44"
        src={
          Object {
            "process": [Function],
          }
        }
        width={181}
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-md-none"
        height="44"
        src={
          Object {
            "process": [Function],
          }
        }
        width={64}
      />
      <div
        aria-labelledby="title"
        className="pointer navbar-brand nav-item nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      />
      <div
        className="navbar-brand"
        id="title"
      >
        eFiling Demo Client
      </div>
    </nav>
  </header>
  <div
    className="page"
  >
    <div
      className="content col-md-10"
    >
      <div
        className="loader-align"
      >
        <div
          className="page-loader"
        />
        <br />
        Loading... Please Wait
      </div>
    </div>
  </div>
  <footer
    className="footer"
  >
    <nav
      className="navbar navbar-expand-sm navbar-dark justify-content-end"
    >
      <button
        className="navbar-toggler"
        data-target="#footerBar"
        data-toggle="collapse"
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse flex-grow-0"
        id="footerBar"
      >
        <ul
          className="navbar-nav text-right"
        >
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca"
              rel="noopener noreferrer"
              target="_blank"
            >
              BC Government
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/disclaimer"
              rel="noopener noreferrer"
              target="_blank"
            >
              Disclaimer
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/privacy"
              rel="noopener noreferrer"
              target="_blank"
            >
              Privacy
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/accessibility"
              rel="noopener noreferrer"
              target="_blank"
            >
              Accessibility
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/copyright"
              rel="noopener noreferrer"
              target="_blank"
            >
              Copyright
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </footer>
</main>
`;

exports[`Storyshots Home No Account Exists 1`] = `
<main>
  <header>
    <nav
      className="container-fluid navbar navbar-expand-lg navbar-dark"
    >
      <div
        aria-labelledby="title"
        className="navbar-brand pointer"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-none d-md-block"
        height="44"
        src={
          Object {
            "process": [Function],
          }
        }
        width={181}
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-md-none"
        height="44"
        src={
          Object {
            "process": [Function],
          }
        }
        width={64}
      />
      <div
        aria-labelledby="title"
        className="pointer navbar-brand nav-item nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      />
      <div
        className="navbar-brand"
        id="title"
      >
        eFiling Demo Client
      </div>
    </nav>
  </header>
  <div
    className="page"
  >
    <div
      className="content col-md-10"
    >
      <div>
        <p>
          Account does not exist, form will be here
        </p>
        <div>
          <button
            className="normal-white btn"
            onClick={[Function]}
            type="button"
          >
            Cancel and return to client
          </button>
        </div>
      </div>
    </div>
  </div>
  <footer
    className="footer"
  >
    <nav
      className="navbar navbar-expand-sm navbar-dark justify-content-end"
    >
      <button
        className="navbar-toggler"
        data-target="#footerBar"
        data-toggle="collapse"
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse flex-grow-0"
        id="footerBar"
      >
        <ul
          className="navbar-nav text-right"
        >
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca"
              rel="noopener noreferrer"
              target="_blank"
            >
              BC Government
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/disclaimer"
              rel="noopener noreferrer"
              target="_blank"
            >
              Disclaimer
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/privacy"
              rel="noopener noreferrer"
              target="_blank"
            >
              Privacy
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/accessibility"
              rel="noopener noreferrer"
              target="_blank"
            >
              Accessibility
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/copyright"
              rel="noopener noreferrer"
              target="_blank"
            >
              Copyright
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </footer>
</main>
`;

exports[`Storyshots Home No Account Exists Mobile 1`] = `
<main>
  <header>
    <nav
      className="container-fluid navbar navbar-expand-lg navbar-dark"
    >
      <div
        aria-labelledby="title"
        className="navbar-brand pointer"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-none d-md-block"
        height="44"
        src={
          Object {
            "process": [Function],
          }
        }
        width={181}
      />
      <img
        alt="B.C. Government Logo"
        className="img-fluid d-md-none"
        height="44"
        src={
          Object {
            "process": [Function],
          }
        }
        width={64}
      />
      <div
        aria-labelledby="title"
        className="pointer navbar-brand nav-item nav-link"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      />
      <div
        className="navbar-brand"
        id="title"
      >
        eFiling Demo Client
      </div>
    </nav>
  </header>
  <div
    className="page"
  >
    <div
      className="content col-md-10"
    >
      <div>
        <p>
          Account does not exist, form will be here
        </p>
        <div>
          <button
            className="normal-white btn"
            onClick={[Function]}
            type="button"
          >
            Cancel and return to client
          </button>
        </div>
      </div>
    </div>
  </div>
  <footer
    className="footer"
  >
    <nav
      className="navbar navbar-expand-sm navbar-dark justify-content-end"
    >
      <button
        className="navbar-toggler"
        data-target="#footerBar"
        data-toggle="collapse"
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        className="collapse navbar-collapse flex-grow-0"
        id="footerBar"
      >
        <ul
          className="navbar-nav text-right"
        >
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca"
              rel="noopener noreferrer"
              target="_blank"
            >
              BC Government
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/disclaimer"
              rel="noopener noreferrer"
              target="_blank"
            >
              Disclaimer
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/privacy"
              rel="noopener noreferrer"
              target="_blank"
            >
              Privacy
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/accessibility"
              rel="noopener noreferrer"
              target="_blank"
            >
              Accessibility
            </a>
          </li>
          <li
            className="nav-item m-1"
          >
            <a
              className="nav-link"
              href="https://www2.gov.bc.ca/gov/content/home/copyright"
              rel="noopener noreferrer"
              target="_blank"
            >
              Copyright
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </footer>
</main>
`;
